fixed bug with modal not opening on other pages, fixed bug with screen size on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -43,7 +43,7 @@ html, body {
     align-items: center;
     width: 100%;
     max-width: 600px;
-    height: 100vh;
+    height: 100%;
     background-color: rgb(240, 248, 255, 0.3);
     padding: 0px 10px 40px 10px;
     /*border-radius: 30px;*/
